tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_Project.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00019:7-14",
    "source": 1,
    "nestingRange": "19:25-19:26",
    "syntax": "def,function",
    "type": "void (Point<F>)",
    "pretty": "function Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E"
  },
  {
    "loc": "00019:7-14",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "19-19"
  },
  {
    "loc": "00022:7-14",
    "source": 1,
    "nestingRange": "22:35-22:36",
    "syntax": "def,function",
    "type": "void (Point<F>, Point<F>)",
    "pretty": "function Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__ES2_"
  },
  {
    "loc": "00022:7-14",
    "target": 1,
    "kind": "def",
    "pretty": "Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__ES2_",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "22-22"
  },
  {
    "loc": "00026:4-11",
    "source": 1,
    "syntax": "use,function",
    "type": "void (Point<F>)",
    "pretty": "function Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  },
  {
    "loc": "00026:4-11",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  },
  {
    "loc": "00029:10-17",
    "source": 1,
    "syntax": "use,function",
    "type": "void (Point<F>)",
    "pretty": "function Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  },
  {
    "loc": "00029:10-17",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Project",
    "sym": "_ZN3Foo7ProjectE5PointITL0__E",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  }
]
