tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_Simple.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Foo_Simple
---
[
  {
    "loc": "00015:7-13",
    "target": 1,
    "kind": "decl",
    "pretty": "Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "15-15"
  },
  {
    "loc": "00031:10-16",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "context": "Foo::Bar",
    "contextsym": "_ZN3Foo3BarEv"
  },
  {
    "loc": "00015:7-13",
    "source": 1,
    "syntax": "decl,function",
    "pretty": "function Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "type": "void (void)"
  },
  {
    "loc": "00031:10-16",
    "source": 1,
    "syntax": "function,use",
    "pretty": "function Foo::Simple",
    "sym": "_ZN3Foo6SimpleEv",
    "type": "void"
  }
]
