tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_Static.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Foo_Static
---
[
  {
    "loc": "00016:14-20",
    "target": 1,
    "kind": "decl",
    "pretty": "Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "context": "Foo",
    "contextsym": "T_Foo",
    "peekRange": "16-16"
  },
  {
    "loc": "00040:16-22",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "context": "Foo::Baz",
    "contextsym": "_ZN3Foo3BazEv"
  },
  {
    "loc": "00016:14-20",
    "source": 1,
    "syntax": "decl,function",
    "pretty": "function Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "type": "void (void)"
  },
  {
    "loc": "00040:16-22",
    "source": 1,
    "syntax": "function,use",
    "pretty": "function Foo::Static",
    "sym": "_ZN3Foo6StaticEv",
    "type": "void (void)",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  }
]
