tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Foo_Typedef.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Foo_Typedef
---
[
  {
    "loc": "00043:8-15",
    "target": 1,
    "kind": "alias",
    "pretty": "Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "context": "Foo",
    "contextsym": "T_Foo"
  },
  {
    "loc": "00052:35-42",
    "target": 1,
    "kind": "use",
    "pretty": "Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "context": "TemplateFunc",
    "contextsym": "_Z12TemplateFuncN3FooIT_E7TypedefE"
  },
  {
    "loc": "00043:8-15",
    "source": 1,
    "syntax": "alias,type",
    "pretty": "type Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "type": "int"
  },
  {
    "loc": "00052:35-42",
    "source": 1,
    "syntax": "type,use",
    "pretty": "type Foo::Typedef",
    "sym": "TA_Foo::Typedef",
    "type": "int",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  }
]
