tests/tests/checks/snapshots/analysis/cpp/bug1781178.cpp/main@Point_IsThereOne.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/bug1781178.cpp/Point_IsThereOne
---
[
  {
    "loc": "00003:7-17",
    "target": 1,
    "kind": "decl",
    "pretty": "Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "context": "Point",
    "contextsym": "T_Point",
    "peekRange": "3-3"
  },
  {
    "loc": "00054:4-14",
    "target": 1,
    "kind": "use",
    "pretty": "Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "context": "TemplateFunc",
    "contextsym": "_Z12TemplateFuncN3FooIT_E7TypedefE"
  },
  {
    "loc": "00066:21-31",
    "target": 1,
    "kind": "use",
    "pretty": "Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "context": "DerivedPoint::Foo",
    "contextsym": "_ZN12DerivedPoint3FooEv"
  },
  {
    "loc": "00003:7-17",
    "source": 1,
    "syntax": "decl,function",
    "pretty": "function Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "type": "_Bool (void)"
  },
  {
    "loc": "00054:4-14",
    "source": 1,
    "syntax": "function,use",
    "pretty": "function Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "type": "_Bool (void)",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  },
  {
    "loc": "00066:21-31",
    "source": 1,
    "syntax": "function,use",
    "pretty": "function Point::IsThereOne",
    "sym": "_ZN5Point10IsThereOneEv",
    "type": "_Bool (void)",
    "confidence": [
      "cppTemplateHeuristic"
    ]
  }
]
